--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
-<link href="/src/style.css" rel="stylesheet">
+<link href="./src/style.css" rel="stylesheet">
+<link rel="stylesheet" href="./dist/output.css">
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -27,18 +28,14 @@
                 I plan to go back home to Charlotte and work on my certificates.
             </aboutMe>
           <linkContain class="container" style="margin-top: 24px;">
-            <link href="https://www.instagram.com/jordan.p25/" target="_blank">
-              <button class="button" >
-                Instagram
+              <button class="button">
+                <a href="https://www.instagram.com/jordan.p25/" target="_blank">Instagram</a>
               </button>
-            </link>
             <p class="bio">Follow me on Instagram</p>
-            <link href="www.linkedin.com/in/jordanpeterson25" target="_blank">
-              <button class="button" >
-                LinkedIn
+              <button class="button">
+                <a href="https://x.com/j0rdan_p25?s=11&t=nsqe50sZLwmNvEsD2PijXg" target="_blank" rel="noopener noreferrer">Twitter</a>
               </button>
-            </link>
-            <p class="bio">Follow me on LinkedIn</p>
+            <p class="bio">Follow me on Twitter</p>
           </linkContain>
         </section>
         <aaside class="sport-stack">
