--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
-<link href="./src/style.css" rel="stylesheet">
-<link rel="stylesheet" href="./dist/output.css">
+<link href="/src/style.css" rel="stylesheet">
+<link rel="stylesheet" href="/dist/output.css">
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
