--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 
 <link href="/src/style.css" rel="stylesheet">
-<link rel="stylesheet" href="/dist/output.css">
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./dist/output.css">
+    <link rel="stylesheet" href="/dist/output.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>JP Personal Webpage</title>
 	</head>
 
