--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 
-<link href="/src/style.css" rel="stylesheet">
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./dist/output.css">
     <link rel="stylesheet" href="/dist/output.css">
+
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./src/style.css" rel="stylesheet">
     <title>JP Personal Webpage</title>
 	</head>
 
@@ -24,7 +24,7 @@
       <mainSection class="flex-row">
         <img src="./src/images/flyguy.png" alt="My Photo" class="image">
         <section class="h2-container">
-          <h2>My name is Jordan Peterson</h2>
+          <h2 class="h2">My name is Jordan Peterson</h2>
             <aboutMe class="imgtxt aboutMe">I am in my fifth year here at East Carolina University, 
                 as I plan to graduate in May 2026. I am 22 years old, and when I graduate, 
                 I plan to go back home to Charlotte and work on my certificates.
