--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/dist/output.css">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./src/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>JP Personal Webpage</title>
 	</head>
 
